added view of page

--- a/app/index.html
+++ b/app/index.html
@@ -24,24 +24,34 @@
         <div class="filter-app-search">
           <div class="filter-app-search-input">
             <i class="fa fa-search" aria-hidden="true"></i>
-            <input class="input input--margin" type="text" placeholder="Начните вводить имя друга">
+            <input class="input input--padding" type="text" placeholder="Начните вводить имя друга">
           </div>
           <div class="filter-app-search-input">
             <input class="input" type="text" placeholder="Название">
           </div>
         </div>
 
-        <div class="filter-app-friend">
+        <div class="filter-app-friends">
 
-          <div class="filter-app-friend-your">
+          <div class="filter-app-friends-your">
+            <h3 class="title-friends">Ваши друзья</h3>
             <div class="item">
-
+              <div class="item-logo"></div>
+              <h3 class="item-title">Вадим Петрович</h3>
+              <div class="close item-close">
+                <i class="fa fa-plus" aria-hidden="true"></i>
+              </div>
             </div>
           </div>
 
-          <div class="filter-app-friend-in-list">
+          <div class="filter-app-friends-in-list">
+            <h3 class="title-friends">Друзья в списке</h3>
             <div class="item">
-
+              <div class="item-logo"></div>
+              <h3 class="item-title">Илья Петрович</h3>
+              <div class="close item-close">
+                <i class="fa fa-times" aria-hidden="true"></i>
+              </div>
             </div>
           </div>
 
