--- a/app/index.html
+++ b/app/index.html
@@ -35,24 +35,28 @@
 
           <div class="filter-app-friends-your">
             <h3 class="title-friends">Ваши друзья</h3>
-            <div class="item">
+
+            <!-- <div class="item">
               <div class="item-logo"></div>
               <h3 class="item-title">Вадим Петрович</h3>
               <div class="close item-close">
                 <i class="fa fa-plus" aria-hidden="true"></i>
               </div>
-            </div>
+            </div> -->
+
           </div>
 
           <div class="filter-app-friends-in-list">
             <h3 class="title-friends">Друзья в списке</h3>
-            <div class="item">
+
+            <!-- <div class="item">
               <div class="item-logo"></div>
               <h3 class="item-title">Илья Петрович</h3>
               <div class="close item-close">
                 <i class="fa fa-times" aria-hidden="true"></i>
               </div>
-            </div>
+            </div> -->
+
           </div>
 
         </div>
@@ -66,5 +70,7 @@
 
   </div><!-- /filter -->
 
+  <script src="http://vk.com/js/api/openapi.js" type="text/javascript"></script>
+  <script src="js/build.js"></script>
 </body>
 </html>
