started to do drag&drop for elements

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
         <div class="filter-app-search">
           <div class="filter-app-search-input">
             <i class="fa fa-search" aria-hidden="true"></i>
-            <input class="input input--padding" type="text" placeholder="Начните вводить имя друга">
+            <input class="input input--padding firstFriendInput" type="text" placeholder="Начните вводить имя друга">
           </div>
           <div class="filter-app-search-input">
             <input class="input" type="text" placeholder="Название">
