--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   <title>FriendsFilter</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
+
+  <script src="https://vk.com/js/api/openapi.js?139" type="text/javascript">
 </head>
 <body>
 
@@ -66,5 +68,6 @@
 
   </div><!-- /filter -->
 
+  <script src="js/build.js"></script>
 </body>
 </html>
