--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 
-  <script src="https://vk.com/js/api/openapi.js?139" type="text/javascript">
+  <script src="https://vk.com/js/api/openapi.js?139" type="text/javascript"></script>
 </head>
 <body>
 
@@ -68,6 +68,6 @@
 
   </div><!-- /filter -->
 
-  <script src="js/build.js"></script>
+  <script src="build.js"></script>
 </body>
 </html>
