Try to use webpack

--- a/app/index.html
+++ b/app/index.html
@@ -37,13 +37,13 @@
 
           <div class="filter-app-friends-your">
             <h3 class="title-friends">Ваши друзья</h3>
-            <div class="item">
-              <div class="item-logo"></div>
-              <h3 class="item-title">Вадим Петрович</h3>
-              <div class="close item-close">
-                <i class="fa fa-plus" aria-hidden="true"></i>
-              </div>
-            </div>
+            <!--<div class="item">-->
+              <!--<div class="item-logo"></div>-->
+              <!--<h3 class="item-title">Вадим Петрович</h3>-->
+              <!--<div class="close item-close">-->
+                <!--<i class="fa fa-plus" aria-hidden="true"></i>-->
+              <!--</div>-->
+            <!--</div>-->
           </div>
 
           <div class="filter-app-friends-in-list">
